actualizado a la version revisada

--- a/propuesta_tesis_magister.tex
+++ b/propuesta_tesis_magister.tex
@@ -35,7 +35,7 @@ Una mala capacidad de redacción tiene consecuencias relevantes como por ejemplo 
 
 Un texto se produce en función de un lector, con el objetivo de lograr comprensión sobre un tema que se busca comunicar. Por otra parte, debe haber relaciones entre las ideas planteadas dentro del texto, para lograr asegurar un significado claro del mismo. Existen dos propiedades que los buenos textos deben tener, las cuales son {\em coherencia} y {\em cohesión} \cite{t32}.
 
-La {\em coherencia textual} es una propiedad que define las conexiones semánticas entre las partes de un texto (por ejemplo: oraciones, párrafos) y está asociada con las representaciones mentales que tiene una persona al leer un determinado texto. Por otro lado, la {\em cohesión} constituye un conjunto de recursos léxicos y gramaticales que enlazan una parte del texto con otra, y por esto, es uno de los factores fundamentales para determinar si un texto puede ser considerado como tal, y no una sucesión de oraciones inconexas.
+La {\em coherencia textual} es una propiedad del texto que define las conexiones semánticas entre unidades de información y está relacionada con la representación mental que el lector tenga del mismo. Esta conexión se da tanto localmente a nivel de oraciones adyacentes, como globalmente (texto completo). Por otro lado, la {\em cohesión} constituye un conjunto de recursos léxicos y gramaticales que enlazan una parte del texto con otra, y por esto, es uno de los factores fundamentales para determinar si un texto puede ser considerado como tal, y no una sucesión de oraciones inconexas.
 
 Una forma de propender al aumento de las capacidades para formular adecuadamente las ideas en un texto es ``practicar'', realizando producciones textuales para que sean evaluadas y corregidas por un especialista humano y, a través de sucesivas repeticiones perfeccionar la calidad del texto producido. Se debe tener en cuenta la diferencia entre corrección y evaluación \cite{t18}.
 
@@ -46,7 +46,7 @@ Una forma de propender al aumento de las capacidades para formular adecuadamente
 
 Debe tenerse en cuenta que la evaluación de textos es una tarea costosa en términos de tiempo y personal requerido. Además, no existe otro modo que evalúe mejor el aprendizaje de un estudiante que no sea mediante la expresión de sus ideas a través de un escrito, por lo que se debe repetir el ejercicio constantemente en el tiempo. Sumado a lo anterior, la cantidad de estudiantes ha crecido con el paso del tiempo, por lo que los costos de corregir y revisar textos se vuelven abrumadores \cite{t10}.
 
-Para disminuir los costos del personal requerido para revisar evaluaciones textuales a gran escala, se han propuesto métodos para evaluar textos de manera automática, tarea conocida como {\em Automatic Essay Scoring}. Los primeros métodos propuestos para esta tarea intentan evaluar características relacionadas a la calidad del texto tales como la dicción, uso de vocabulario, coherencia, entre otras. Para ello, utilizan la ocurrencia de términos (conteo de signos de puntuación, largo de las palabras, entre otros). 
+Para disminuir los costos del personal requerido para revisar evaluaciones textuales a gran escala, se han propuesto métodos para evaluar textos de manera automática, tarea conocida como {\em Automatic Essay Scoring}. Los primeros sistemas propuestos para esta tarea intentan evaluar características relacionadas a la calidad del texto tales como la dicción, uso de vocabulario, coherencia, entre otras. Para ello, se utiliza la ocurrencia de términos (conteo de signos de puntuación, largo de las palabras, entre otros). 
 
 Sin embargo, este método de evaluación automática de textos tiene algunas debilidades \cite{t9}\cite{t24}\cite{t25}:
 
@@ -88,16 +88,16 @@ Un método que considera características sintácticas y semánticas para evaluar co
 
 \section{Estado del Arte}
 
-La primeras técnicas de evaluación automática de textos (como PEG \cite{t0})  modelan los textos como una combinación lineal de sus características intrínsicas (dicción, contenido, fluidez, etc.). Estas características intrínsicas se estiman mediante características superficiales ({\em proxes}) tales como: la cantidad de palabras, largo del ensayo, cantidad de signos de puntuación utilizados, largo de las oraciones, etc. El método consta de dos etapas, una de entrenamiento y una de evaluación. En la etapa de entrenamiento se utilizan textos que ya tienen un puntaje asignado. Luego, existe una fase de extracción de características para posteriormente aplicar una regresión lineal (multi-variable), de manera de ajustar las ponderaciones (pesos) de cada característica. Finalmente, el puntaje de un ensayo se calcula como se muestra en la ecuación \ref{eq0}.
+La primeras técnicas de evaluación automática de textos (como PEG \cite{t0})  modelan los textos como una combinación lineal de sus características intrínsicas (dicción, contenido, fluidez, etc.). Estas características intrínsicas se estiman mediante características superficiales ({\em proxes}) tales como: la cantidad de palabras, largo del ensayo, cantidad de signos de puntuación utilizados, largo de las oraciones, etc. La metodología para la evaluación consta de dos etapas, una de entrenamiento y una de evaluación. En la etapa de entrenamiento se utilizan textos que ya tienen un puntaje asignado. Luego, existe una fase de estracción de características para posteriormente aplicar una regresión lineal (multi-variable), de manera de ajustar las ponderaciones (pesos) de cada característica. Finalmente, el puntaje de un ensayo se calcula como se muestra en la ecuación \ref{eq0}.
 
 \begin{equation}
 	\label{eq0}
 	Puntaje = \beta_0 + \sum\limits_{i=1}^n \beta_iP_i
 \end{equation}
 
-Donde $\beta_i$ representa la ponderación correspondiente al {\em proxe} $P_i$. Los mejores resultados experimentales mostraron una correlación de 0.87 entre los puntajes asignados por PEG y los asignados por humanos \cite{t0}. Sin embargo, el método utiliza medidas indirectas de la calidad del texto a evaluar lo cual no deja al método exento de críticas \cite{t9}. El uso medidas indirectas deja al método vulnerable a engaños, ya que los estudiantes podrían mejorar sus puntajes obtenidos mediante trucos (por ejemplo escribir un texto más largo). Por otro lado, se ha argumentado que el uso de estas medidas indirectas no captura características importantes tales como contenido, organización, y coherencia. La razón de ello es que el método se fundamenta únicamente en la frecuencia de aparición de cada {\em proxe} y no en el significado de lo que está esctrito ni en las relaciones que hay entre las ideas expresadas en el texto, lo cual es un problema pues no se está asignando un puntaje acorde al contenido del texto.
+Donde $\beta_i$ representa la ponderación correspondiente al {\em proxe} $P_i$. Los mejores resultados experimentales mostraron una correlación de 0.87 entre los puntajes asignados por PEG y los asignados por humanos \cite{t0}. Sin embargo, el método utiliza medidas indirectas de la calidad del texto a evaluar lo cual no deja al método exento de críticas \cite{t9}. El uso medidas indirectas deja al método vulnerable a engaños, ya que los estudiantes podrían mejorar sus puntajes obtenidos mediante trucos (por ejemplo escribir un texto más largo). Por otro lado, se ha argumentado que el uso de estas medidas indirectas no capturan características importantes tales como contenido, organización, y coherencia. La razón de ello es que el método se fundamenta únicamente en la frecuencia de aparición de cada {\em proxe} y no en el significado de lo que está esctrito ni en las relaciones que hay entre las ideas expresadas en el texto.
 
-Para poder evaluar el contenido de un texto, posteriores investigaciones se centraron en utilizar técnicas de {\em Recuperación de Información} (IR) \cite{t26} y {\em Procesamiento del Lenguaje Natural} (NLP) \cite{t27}. Para representar el contenido de un texto se utiliza un modelo de IR conocido como modelo de espacio vectorial. Este modelo considera un corpus (conjunto de documentos), el cual tiene asociado un vocabulario, que son las palabras que aparecen en los documentos del corpus (dimensiones del espacio). Teniendo este espacio vectorial, se puede representar un documento a partir de la frecuencia de aparición de los términos que lo componen (ecuación \ref{eq1}).
+Para poder evaluar el contenido de un texto, posteriores investigaciones se centraron en utilizar técnicas de {\em Recuperación de Información} (IR) \cite{t26} y {\em Procesamiento del Lenguaje Natural} (NLP) \cite{t27}. Para representar el contenido de un texto se utiliza un modelo de IR conocido como modelo de espacio vectorial. Este modelo considera un corpus (conjunto de documentos), el cual tiene asociado un vocabulario, que son las palabras que aparecen en los documentos del corpus (dimensiones del espacio). Teniendo este espacio vectorial, se puede representar un documento a partir de la frecuencia de aparición de los términos que lo componen, como se muestra en la ecuación \ref{eq1}.
 
 \begin{equation}
 	\label{eq1}
@@ -113,44 +113,25 @@ Donde cada componente del vector $d$ representa la frecuencia en que el término 
 
 Donde $d_i$ y $d_j$ son vectores que representan el contenido del texto. Utilizando esta medida de similitud y, teniendo a disposición un conjunto de ensayos pre-evaluados, se pueden evaluar automáticamente ensayos nuevos, buscando para ello el ensayo pre-evaluado más similar.
 
-Se ha logrado una correlación entre los puntajes asignados por la técnica y los asignados por humanos de 0.76 \cite{t5}. Sin embargo, la evaluación depende fuertemente de la co-ocurrencia de términos, por lo que un ensayo que sea sólo un conjunto de palabras sin una conexión clara, podría ser bien evaluado \cite{t9}. Por otro lado, la técnica está puramente basada en ``palabras claves'' las cuales podrían no aparecer explícitamente en los ensayos. Esto es un problema, pues existen palabras diferentes que tienen un mismo significado (sinónimos) y que podrían no aparecer lo suficiente en un documento, lo cual traería como consecuencia una mala evaluación, según el método. También hay problemas con polisemia, pues un caso posible es tener un documento que utilice una palabra que por ocurrencia es importante, pero que esté siendo utilizada en un contexto diferente al que se quiere evaluar.
+Se ha logrado una correlación entre los puntajes asignados por la técnica y los asignados por humanos de 0.76 \cite{t5}. Sin embargo, la evaluación depende fuertemente de la co-ocurrencia de términos, por lo que un ensayo que sea sólo un conjunto de palabras sin una conexión clara, podría ser bien evaluado \cite{t9}. Por otro lado, la técnica está puramente basada en ``palabras claves'' las cuales podrían no aparecer explícitamente en los ensayos.
 
-Para abordar problemas como la aparición de sinónimos, y la alta dimensionalidad del modelo de espacio vectorial, se ha propuesto el uso de técnicas de reducción dimensional como el {\em Análisis Semántico Latente} (LSA) \cite{t28}. El Análisis Semántico Latente es una técnica que intenta extraer y representar los significados de las palabras. La técnica toma como supuesto que existe algo que subyace latente en la estructura semántica de los datos, y que está parcialmente oculto a causa de la elección aleatoria de palabras. LSA puede utilizarse para medir coherencia textual \cite{t8} \cite{t10} \cite{t20} \cite{t29}, y evaluar ensayos\cite{t9}. Para evaluar ensayos, se entrena LSA con un corpus de documentos, entre ellos ensayos pre-evaluados, y se obtiene un espacio semántico. Los ensayos nuevos son llevados a este espacio y se evalúan de acuerdo a algún criterio de similaridad como los descritos previamente\cite{t10}.
+Para abordar el problema de la ocurrencia de términos, se ha propuesto el uso de técnicas de reducción dimensional como el {\em Análisis Semántico Latente} (LSA) \cite{t28}. El Análisis Semántico Latente es una técnica que intenta extraer y representar los significados de las palabras. La técnica toma como supuesto que existe algo que subyace latente en la estructura semántica de los datos, y que está parcialmente oculto a causa de la elección aleatoria de palabras. LSA puede utilizarse para medir coherencia textual \cite{t8} \cite{t10} \cite{t20} \cite{t29}, y evaluar ensayos\cite{t9}. Para evaluar ensayos, se entrena LSA con un corpus de documentos, entre ellos ensayos pre-evaluados, y se obtiene un espacio semántico. Los ensayos nuevos son llevados a este espacio y se evalúan de acuerdo a algún criterio de similaridad como los descritos previamente\cite{t10}.
 
-LSA tiene varias debilidades, como por ejemplo:
+Un problema con LSA es que al utilizar un modelo de bolsa de palabras no considera el orden de las mismas. Por ejemplo se consideraría equivalente ``literatura fantástica'' con ``fantástica literatura''. Tampoco considera cómo están escritas las oraciones. Podría tenerse un texto sin cohesión y ser bien evaluado si cumple con los criterios de similaridad establecidos.
 
-\begin{itemize}
-	\item No aborda el problema de la polisemia (palabra con diferentes significados). Podrían considerarse similares documentos que hablan de temas diferentes.
-	\item No se considera el contexto de las palabras (esto es una consecuencia de utilizar un modelo de bolsa de palabras).
-	\item Es difícil interpretar los significados en el espacio semántico, y esto es un problema pues se quiere asegurar una evaluación similar a la que daría un humano.
-	\item No se define un modelo probabilístico en la ocurrencia de términos. Esto es un problema, pues no se asocia una palabra a un determinado tópico, y por ende, la efectividad del método está fuertemente ligada a los documentos que se utilicen al entrenar.
-\end{itemize}
-
-Para solventar parcialmente el problema de utilizar un modelo de bolsa de palabras se ha propuesto un método denominado \cite{t13}: Generalized Latent Semantic Analysis (GLSA). Esta método representa los textos utilizando ffrecuencia n-gramas en vez de palabras. La ventaja que tiene esto, es que se hace distinción en segmentos de texto como por ejemplo ``dióxido de carbono'' con ``Carbono de dióxido'', lo que LSA convencional consideraría como equivalente. Para aplicar esta GLSA en la evaluación automática de ensayos, se realiza el mismo procedimiento que con LSA. Experimentalmente se ha obtenido una correlación 0.88 entre el puntaje asignado por humanos y el asignado por el método \cite{t13}. Algunos problemas de de este método:
+Para solventar parcialmente el problema relacionado al orden de las palabras, se ha propuesto una variación de LSA \cite{t13}: ``Generalized Latent Semantic Analysis'' (GLSA). Esta variación utiliza conteo de n-gramas en lugar de palabras. La ventaja que tiene esto, es que hace distinción en segmentos de texto como por ejemplo ``dióxido de carbono'' con ``Carbono de dióxido'', lo que LSA convencional consideraría como equivalente. Para aplicar esta GLSA en la evaluación automática de ensayos, se realiza el mismo procedimiento que con LSA. Experimentalmente se ha obtenido una correlación 0.88 entre el puntaje asignado por humanos y el asignado por el método \cite{t13}. La mejora no es sustancial en comparación a LSA (correlación 0.86 - 0.87). Algunos problemas de esta técnica incluyen:
 
 \begin{itemize}
-	\item Alta dimensionalidad.
-	\item La descomposición de valores singulares es costosa computacionalmente.
-	\item LSA convencional ha obtenido correlaciones con humanos de hasta 0.86, lo que indica que GLSA no presenta una mejora significativa para la evaluación automática de textos.
+	\item Alta dimensionalidad de la matriz, mayor que en LSA convencional.
+	\item Alto grado de dispersión.
+	\item La descomposición de valores singulares es costosa computacionalmente, y se vuelve poco práctica debido a la alta dimensionalidad de la matriz.
 \end{itemize}
 
-Tanto LSA como GLSA se fundamentan en una técnica matemática denominada descomposición de valores singulares, por lo que sufren del problema de no definir un modelo probabilístico en la courrencia de términos. Para solventar este problemas, se han propuesto métodos como PLSA ({\em Probabilistic Latent Semantic Analysis}) y LDA ({\em Latent Dirichlet Allocation}). Estos métodos representan los documentos como mezclas de tópicos, los cuales están representados por una distribución de probabilidad de palabras. Por ejemplo el texto ``{\em El  hamster está comiendo brocoli}'' podría ser representado por dos tópicos (comida y animales).
+Por otro lado, , han propuesto nuevas medidas de coherencia semántica para resolver el problema de la evaluación de contenido en los textos\cite{t40}. Estas medidas están basadas en un modelo de espacio vectorial como el descrito previamente. Lo que se hace es dividir cada ensayo en partes fundamentales (Introducción, desarrollo, y conclusión), y se extraen características tales como: oraciones más distantes semánticamente, distancia de las oraciones del texto a su centroide en el espacio semántico, distancia semántica promedio entre oraciones más cercanas, y otras medidas estadísticas. Las pruebas demostraron que agregando estas medidas de coherencia se obtienen resultados mejores que sin considerarlas, y que superan a modelos en la literatura en términos de correlación entre notas asignadas por el sistema y por evaluador humano.
 
-Para aplicar PLSA y LDA en la evaluación automática de ensayos se requiere encontrar los tópicos que representan a los documentos. Teniendo los tópicos y la distribución de palabras que los representan, se pueden realizar calculos de similaridad entre documentos, y aplicar métodos como kNN, para dar nota a nuevos ensayos de acuerdo a la similaridad que tengan con ensayos previamente evaluados. Se ha encontrado que PLSA y LDA no obtienen mejores resultados que LSA para la tarea de evaluación automática de ensayos \cite{t42}. 
+Existen otros métodos para medir coherencia textual que consideran la sintaxis de un texto \cite{t33}\cite{t34}\cite{t35} y su fundamentan en teoría de centrado \cite{t36}. En particular, se establece que los segmentos de un discurso que se centran en ciertas entidades, son más coherentes que los que discuten múltiples entidades entre oraciones.
 
-Por otro lado, se han propuesto nuevas medidas de coherencia semántica para resolver el problema de AEG mediante clasificación \cite{t40}. Estas medidas están basadas en un modelo de espacio vectorial como el descrito previamente. Lo que se hace es dividir cada ensayo en partes fundamentales (Introducción, desarrollo, y conclusión), y se extraen características tales como: oraciones más distantes semánticamente, distancia de las partes a un centroide, distancia promedio entre oraciones más cercanas, entre otros. Las pruebas demostraron que agregando estas medidas de coherencia se obtienen resultados mejores que sin considerarlas, y que superan a modelos en la literatura en términos de correlación entre notas asignadas por el sistema y por evaluador humano.
-
-Otras técnicas de evaluación consideran métodos de aprendizaje no supervisado es decir, ``no hay datos previamente etiquetados por humanos''. Este tipo de técnicas intentan resolver el problema de requerir demasiados datos pre-evaluados. En \cite{t37}, se utiliza un método de clustering basado {\em Z-score}. La técnica ha logrado buenos resultados en cuanto a {\em accuracy} de la evaluación. Los problemas con este método son los siguientes:
-
-\begin{itemize}
-	\item Utiliza modelo de bolsa de palabras, por lo que tiene los mismos problemas que los métodos anteriores.
-	\item El cálculo de los Z-score iniciales del método depende de una medida indirecta (cantidad de palabras ``únicas'' del ensayo).
-	\item Para interpretar los clusters obtenidos se requiere un historial de notas de ensayos, o suponer una distribución normal.
-\end{itemize}
-
-Existen otros métodos para medir coherencia textual que consideran la sintaxis de un texto \cite{t33}\cite{t34}\cite{t35} y su fundamentan en teoría de centrado \cite{t36}. La teoría de centrado estudia cómo se introducen y discuten entidades dentro de un discurso. En particular, se establece que los segmentos de un discurso que se centran en ciertas entidades, son más coherentes que los que discuten múltiples entidades entre oraciones.
-
-Para la componente sintáctica se considera que el análisis de coherencia gira entorno a patrones de transiciones de entidades locales que especifican cómo el foco del discurso cambia entre las oraciones. El supuesto clave es que ciertos tipos de transiciones son probables que aparezcan discursos coherentes. Para exponer estos patrones de transición de entidades, se representará un texto mediante una matriz de entidades. Las columnas de esta matriz corresponden a las entidades del discurso, mientras que las celdas corresponden a oraciones del mismo. Un ejemplo de texto y su matriz de entidades se muestran en las figuras 1 y 2.
+Para evaluar la componente sintáctica de un texto, el análisis de coherencia se basa en patrones que se detectan entre entidades locales y que muestra la forma en que cambia el foco del discurso entre las oraciones. Se toma como supuesto que existen patrones que es más probable que aparezcan en discursos coherentes. Para detectar estos patrones, se representará un texto mediante una matriz de entidades. Las columnas de esta matriz corresponden a las entidades del discurso, y las celdas corresponden a oraciones del mismo. Un ejemplo de texto y su matriz de entidades se muestran en las figuras 1 y 2.
 	
 \begin{figure}[!htbp]
   \begin{center}
@@ -169,25 +150,25 @@ Para la componente sintáctica se considera que el análisis de coherencia gira en
   \caption{Una matriz de entidades}
   \label{figura2}
 \end{figure}
-Las columnas de la matriz representan la presencia o ausencia de una entidad en una secuencia de oraciones $(S_1,...,S_n)$. En particular, cada celda de la matriz representa el rol $r_{ij}$ de la entidad $e_j$ en la oración $S_i$. Los roles gramaticales reflejan si una entidad es un sujeto, objeto, ninguno o simplemente se encuentra ausente. Por ejemplo, en la figura 2, si se considera la entidad arrest, se observa que en la oración 3 es un sujeto, en la oración 6 es un objeto, pero se encuentra ausente en el resto de las oraciones. El cálculo de estas matrices es simple si es que se tiene un parser preciso a disposición. En este caso se utiliza el parser de Collins' \cite{t38}, que es un parser estadístico para identificar las entidades de discurso y sus roles gramaticales.
 
-Posteriormente, la coherencia de un texto $T(S_1, ..., S_n)$ con entidades $e1, ..., e_m$ como una distribución de probabilidad conjunta que describe cómo las entidades están distribuidas a través de las oraciones de un documento:
+Las columnas de la matriz representan la presencia o ausencia de una entidad en una secuencia de oraciones $(S_1,...,S_n)$. En particular, cada celda de la matriz representa el rol $r_{ij}$ de la entidad $e_j$ en la oración $S_i$. Los roles gramaticales reflejan si una entidad es un sujeto, objeto, ninguno o simplemente se encuentra ausente. Por ejemplo, en la figura 2, si se considera la entidad \textit{arrest}, se observa que en la oración 3 es un sujeto, en la oración 6 es un objeto, pero se encuentra ausente en el resto de las oraciones. 
+
+Posteriormente, la coherencia de un texto $T(S_1, ..., S_n)$ con entidades $e1, ..., e_m$, se puede ver como una distribución de probabilidad conjunta que describe cómo las entidades están distribuidas a través de las oraciones de un documento:
 
 \begin{equation}
 	Pcoherence(T) = P(e_1,...,e_m; S_1,...,S_n)
 \end{equation}
 
-El modelo para ser entrenado requiere textos coherentes \cite{t36}. Luego, puede utilizarse para predecir $P$ en textos nuevos. Se tendrá que $P_{coherence}(T)$ será mayor para textos que se consideren más coherentes que los que tengan un $P_{coherence}(T)$ menor.
+Para obtener el modelo que define esta distribución de probabilidad, se requiere un conjunto de textos que los humanos consideren coherentes \cite{t36}. Luego, se puede predecir $P$ en textos nuevos. Se tendrá que $P_{coherence}(T)$ será mayor para textos que se consideren más coherentes que los que tengan un $P_{coherence}(T)$ menor.
 
-Para la componente semántica existen se puede modelar la forma en que las oraciones y frases se enlazan. Se representa la cohesión léxica a través de un modelo {\em cadenas léxicas} \cite{t39}, es decir, secuencias de palabras relacionadas que abarcan una unidad textual. Unidades textuales coherentes tendrán una alta concentración de estas cadenas. La premisa fundamental detrás de las cadenas léxicas es que textos coherentes contendrán una gran cantidad de palabras relacionadas semánticamente. Este supuesto permite realizar una representación que no considere la sintaxis del texto, y que no considere el orden de las palabras. Por tanto, se puede representar cada texto como una bolsa de palabras. Se puede representar cada oración como un conjunto de palabras. Luego, para medir la coherencia local de un texto se debe cuantificar la relación semántica entre oraciones adyacentes. Por lo tanto, para medira la coherencia de un texto T se tomará el promedio de las similitudes entre oraciones:
+El método también considera una componente semántica que modela cómo se enlazan las oraciones en términos de la representación mental que hace un lector al leer el texto. Se representa la cohesión léxica a través de un modelo de {\em cadenas léxicas} \cite{t39}, es decir, secuencias de palabras relacionadas que abarcan una unidad textual (por ejemplo: oración, párrafo, etc.). Se supone que unidades textuales coherentes tendrán una alta concentración de estas cadenas, pues se considera que los textos coherentes poseen una gran cantidad de palabras relacionadas semánticamente. Este supuesto permite realizar una representación que no considere la sintaxis del texto, y que no considere el orden de las palabras. Por tanto, se puede representar cada texto como una bolsa de palabras. Se puede representar cada oración como un conjunto de palabras. Luego, para medir la coherencia local de un texto se debe cuantificar la relación semántica entre oraciones adyacentes. Por lo tanto, para medir la coherencia de un texto T se tomará el promedio de las similitudes entre oraciones:
 
 \begin{equation}
 	coherencia(T) = \frac{\sum_{i=1}^{n-1}sim(S_i, S_{i+1})}{n-1}
 \end{equation}
-Se tiene que $sim(S_i, S_{i+1})$ es una medida de similaridad entre las oraciones $S_i$ y $S_{i+1}$. Se
-utilizarán distintas medidas de similitud.
+Donde $sim(S_i, S_{i+1})$ es una medida de similaridad entre las oraciones $S_i$ y $S_{i+1}$ (ej: coseno).
 
- Este método fue utilizado para evaluar coherencia de resúmenes generados automáticamente por un computador, tomando como referencia resúmenes escritos por humanos\cite{t33}. Se compararon distintos métodos para evaluar coherencia textual como LSA, o métodos basados en Thesauros. Se detectó que no hay correlación entre los métodos, por lo que evalúan distintas componentes de coherencia. Luego, se propuso un ensamble de modelos para evaluar la coherencia textual, obteniendo una correlación con humanos más alta que cualquier método por sí solo. 
+Los experimentos compararon distintos métodos para evaluar coherencia textual como LSA, o métodos basados en Thesauros \cite{t33}. Se detectó que no hay correlación entre los distintos métodos, por lo que evalúan distintas componentes de la coherencia textual. Luego, se propuso un ensamble de modelos para evaluar la coherencia textual, obteniendo una correlación con humanos más alta que cualquier método por sí solo. 
 
 Tomando lo anterior, un modelo que considere la sintaxis y semántica de un ensayo puede superar a cualquier modelo que utilice medidas indirectas.
 
@@ -195,20 +176,20 @@ Tomando lo anterior, un modelo que considere la sintaxis y semántica de un ensay
 \section{Metodología Experimental para Validar Hipótesis}
 
 \begin{enumerate}
-	\item Se realizará una revisión bibliográfica de métodos que consideren evaluar coherencia a nivel de discurso.
+	\item Se realizará una revisión bibliográfica de métodos para evaluación de coherencia a nivel de discurso.
 	
-	\item Se recopilarán datos de ensayos evaluados por humanos, los cuales se limpiarán y prepararán para utilizarlos en el modelo propuesto. Para este procesamiento y limpieza se utilizarán herramientas existentes como por ejemplo nltk, pyCharm, entre otros. Los datos a utilizar serán los proporcionados por Kaggle\footnote{http://www.kaggle.com/c/asap-aes/data} en la competencia {\em Automatic Essay Scoring}. Este conjunto de datos contiene 8 categorías diferentes de ensayo. Cuatro de ellas consisten en géneros de escritura tradicional (persuasivo, narrativo, etc.) y los otros cuatro están basados en una fuente (es decir, los estudiantes leen un documento fuente y discuten preguntas respecto a dicho documento).
+	\item Se recopilarán datos de ensayos evaluados por humanos, los cuales se limpiarán y prepararán para utilizarlos en el método a desarrollar. Para este procesamiento y limpieza se utilizarán herramientas existentes como por ejemplo nltk, pyEnchant, entre otros. Los datos a utilizar serán los proporcionados por Kaggle\footnote{http://www.kaggle.com/c/asap-aes/data} en la competencia {\em Automatic Essay Scoring}, el cual contiene datos de ocho categorías diferentes de ensayo, que del total cuatro de ellas consisten en géneros de escritura tradicional (persuasivo, narrativo, etc.) y los otros cuatro están basados en una fuente (es decir, los estudiantes leen un documento fuente y discuten preguntas respecto a dicho documento).
 	
-	\item Se desarrollará un método de evaluación que considere lo propuesto en la hipótesis, es decir, sintaxis y semántica del ensayo a evaluar. Para ello, se estudiarán modelos de evaluación de coherencia textual que se fundamenten en teoría de discursos. Se tomará como base el modelo propuesto en \cite{t33}, el cual deberá a lo menos ser adaptado al contexto de evaluación automática de ensayos. Para ello se requerirá realizar un ensamble de modelos de evaluación automática de ensayos.
+	\item Se desarrollará un método de evaluación que considere sintaxis y semántica del ensayo a evaluar. Para ello, se estudiarán modelos de evaluación de coherencia textual que se fundamenten en teoría de discursos, pues estos consideran estas dos componenetes.
 	
-	\item Se implementará un prototipo computacional para realizar las pruebas y experimentos que validen la hipótesis, y esto se realizará con herramientas existentes.
+	\item Se implementará un prototipo computacional de los distintos métodos propuestos en la literatura, con la finalidad de realizar experimentos que validen la hipótesis.
 	
-	\item El modelo se evaluará y luego se comparará con otros modelos en la literatura, se utilizarán las siguientes métricas:
+	\item El método propuesto se evaluará y luego se comparará con otros métodos existentes en la literatura, para ello se utilizarán métricas tales como:
 	
 	\begin{itemize}
-		\item {\em Exact Agreement}: Se define como la proporción de ensayos que fueron calificados igualmente por el evaluador humano y la técnica computacional.
-		\item {\em Adjacent Agreement}: Es una medida que se define como el la proporción ensayos que fueron evaluados igual por el evaluador humano y la técnica computacional o que difiere en a lo más 1 punto (de calificación).
-		\item {\em Quadratic Weighted Kappa}: es una métrica de error, que mide el grado de acuerdo entre dos evaluadores.
+		\item {\em Exact Agreement}: Se define como la proporción de ensayos que fueron calificados igualmente por el evaluador humano y el método computacional.
+		\item {\em Adjacent Agreement}: Es una medida que se define como el la proporción ensayos que fueron evaluados igual por el evaluador humano y el método computacional o que difiere en a lo más 1 punto (de calificación).
+		\item {\em Quadratic Weighted Kappa}: Mide el grado de acuerdo entre los puntajes asignados por dos evaluadores. Su valor máximo es 1, si los evaluadores están completamente de acuerdo, si hay desacuerdo, la métrica puede tomar valores negativos.
 	\end{itemize}
 
 \end{enumerate}
